--- a/comparisons.html
+++ b/comparisons.html
@@ -49,20 +49,23 @@
         <div class="row">
             <div class="col">
                 <h2 href="/.temperature.html">Latitude vs. X</h2>
-                <img src="\Resources\assets\images\Fig1.png" class="img-fluid" alt="Fig1">
+                <img src="/Resources/assets/images/Fig1.png" class="img-fluid" alt="Fig1">
             </div>
             <div class="col">
                 <h2 href="/.wind.html">Latitude vs. X</h2>
-                <img src="\Resources\assets\images\Fig2.png" class="img-fluid" alt="Fig2">
+                <img src="/Resources/assets/images/Fig1.png" class="img-fluid" alt="Fig1">
             </div>
+        </div>
         </div class="row">
             <div class="col">
                 <h2 href="/.temperature.html">Latitude vs. X</h2>
-                <img src="\Resources\assets\images\Fig3.png" class="img-fluid" alt="Fig3">
+                <img src="/Resources/assets/images/Fig1.png" class="img-fluid" alt="Fig1">
             </div>
             <div class="col">
                 <h2 href="/.temperature.html">Latitude vs. X</h2>
-                <img src="\Resources\assets\images\Fig4.png" class="img-fluid" alt="Fig4">
+                <img src="/Resources/assets/images/Fig1.png" class="img-fluid" alt="Fig1">
             </div>
+        </div>
+    </div>
 </body>
 </html>
