--- a/comparisons.html
+++ b/comparisons.html
@@ -41,31 +41,30 @@
 
     <div class="container">
         <div class="row">
-            <h1 class="border-bottom"> Comparison: Latitude vs. X</h1>
+            <div class="col">
+                <h1 class="border-bottom"> Comparison: Latitude vs. X</h1>
+                <p> Click any plot to get in depth analysis.</p>
+            </div>
         </div>
         <div class="row">
-            <p>Click on any image to view an in depth analysis</p>
+            <div class="col-sm-6">
+                <h2>vs. Max Temperature</h2>
+                <a href="./temperature.html"><img src="Fig1.png" class="img-fluid" alt="Fig1"></a>
+            </div>
+            <div class="col-sm-6">
+                    <h2>vs. Humidity</h2>
+                    <a href="./humidity.html"><img src="Fig2.png" class="img-fluid" alt="Fig2"></a>
+            </div>
         </div>
         <div class="row">
-            <div class="col">
-                <h2 href="/.temperature.html">Latitude vs. X</h2>
-                <img src="/Resources/assets/images/Fig1.png" class="img-fluid" alt="Fig1">
+                <div class="col-sm-6">
+                    <h2>vs. Cloudiness</h2>
+                    <a href="./cloudiness.html"><img src="Fig3.png" class="img-fluid" alt="Fig3"></a>
+                </div>
+                <div class="col-sm-6">
+                        <h2>vs. Wind Speed</h2>
+                        <a href="./wind.html"><img src="Fig1.png" class="img-fluid" alt="Fig4"></a>
+                </div>
             </div>
-            <div class="col">
-                <h2 href="/.wind.html">Latitude vs. X</h2>
-                <img src="/Resources/assets/images/Fig1.png" class="img-fluid" alt="Fig1">
-            </div>
-        </div>
-        </div class="row">
-            <div class="col">
-                <h2 href="/.temperature.html">Latitude vs. X</h2>
-                <img src="/Resources/assets/images/Fig1.png" class="img-fluid" alt="Fig1">
-            </div>
-            <div class="col">
-                <h2 href="/.temperature.html">Latitude vs. X</h2>
-                <img src="/Resources/assets/images/Fig1.png" class="img-fluid" alt="Fig1">
-            </div>
-        </div>
-    </div>
 </body>
 </html>
